--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": "vite build",
     "deploy": "gh-pages -d dist",
-    "build": "vite build",
+    "build": "vite build --base=./",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
