--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "gh-pages": "^5.0.0",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
